# XueMate

./: .env.example  .gitignore  CLAUDE.md  README.md  electron-builder.yml  electron.vite.config.mjs  package-lock.json  package.json  renderer.vite.config.mjs  tsconfig.json
.tmp/: test-xuemate-api.cjs  test-xuemate-graph.cjs  xuemate-api-smoke-entry.ts  xuemate-api-smoke.cjs  xuemate-learningGraph.cjs
cloud/: docker-compose.full.yml  docker-compose.server.yml  docker-compose.yml
design-duolingo/: duolingo-com-DESIGN.md  duolingo-com-design-language.md  duolingo-com-design-tokens.json  duolingo-com-form-states.json  duolingo-com-icon-system.json  duolingo-com-intent.json  duolingo-com-library.json  duolingo-com-mcp.json  duolingo-com-motion-tokens.json  duolingo-com-preview.html  duolingo-com-seo.json  duolingo-com-stack-intel.json  duolingo-com-tailwind.config.js  duolingo-com-variables.css  duolingo-com-visual-dna.json  duolingo-com-voice.json  duolingo-com-vue-theme.js  duolingo-com-wordpress-theme.json
docs/: CLOUD_VENDOR_STACK.md  COMPETITION_POSITIONING.md  FOCUSED_SCENARIO.md  GOOGLE_VERTEX_COMPUTER_USE.md  MCP_GATEWAY.md  MEMORY_SYSTEM.md  PEER_EDGE_ARCHITECTURE.md  PEER_EDGE_TODO.md  RAG_METRICS.md  RAG_PERFORMANCE.md  WEB_SEARCH_VENDOR_STACK.md
mcp-gateway-rs/: Cargo.toml
mcp-gateway-rs/src/: main.rs
peer-edge-rs/: Cargo.toml
peer-edge-rs/src/: cache.rs  client.rs  config.rs  discovery.rs  fanout.rs  main.rs  server.rs  sketch.rs  sketch_cache.rs  types.rs
scripts/: bench-internal-agent-mcp.mjs  bench-mcp-layer.mjs  memory-benchmark.mjs  (+2 more)
(+141 files in other folders)
