[package]
name = "xuemate-mcp-gateway"
version = "0.1.0"
edition = "2021"
description = "Rust MCP gateway for XueMate local learning tools"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
