[package]
name = "xuemate-peer-edge"
version = "0.1.0"
edition = "2021"
description = "Rust PeerEdge daemon for XueMate classroom edge learning network"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
mdns-sd = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
